# gl_text

./: .gitmodules  CMakeLists.txt  fragment_shader.glsl  main.cpp  shader_utils.cpp  text.cpp  text.h
